Move description display and edit into a directive.

--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -9,9 +9,7 @@
         </ul>
 
         <div class="row">
-            <h4 class="text-uppercase section">description</h4>
-
-            <p>{{ctrl.file.description}}</p>
+           <file-description file="ctrl.file"></file-description>
         </div>
 
         <div class="row">
