--- a/website/app/index.html
+++ b/website/app/index.html
@@ -159,6 +159,7 @@
 <script src="application/core/projects/project/files/files-search-controller.js"></script>
 <script src="application/core/projects/project/files/file-tags.js"></script>
 <script src="application/core/projects/project/files/file-notes.js"></script>
+<script src="application/core/projects/project/files/file-description.js"></script>
 <script src="application/core/projects/project/files/file-edit-controls.js"></script>
 <script src="application/core/projects/project/files/display-file-contents-directive.js"></script>
 <script src="application/core/projects/project/access/access-controller.js"></script>
