--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,6 +1,47 @@
-<div class="row">
-    <div class="col-sm-12 card">
-        <div ag-grid="home.gridOptions" class="ag-blue"></div>
+<div class="row ">
+    <!--<div class="col-sm-12">-->
+        <!--<div ag-grid="home.gridOptions" class="ag-blue"></div>-->
+    <!--</div>-->
+    <div class="col-xs-8 card">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Samples</th>
+                <th>Properties</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="sample in home.project.samples">
+                <td style="width:40%">
+                    <b><a ui-sref="projects.project.samples.all.edit({sample_id: sample.id})">{{sample.name}}</a></b>
+
+                    <div style="padding-bottom: 15px;">
+                        <p style="font-size: 12px;padding-bottom: 10px;">
+                            {{sample.birthtime | toDateString}}
+                            <span style="padding-left: 10px">{{sample.owner}}</span>
+                        </p>
+
+                        <display-image-tab sample-obj="sample"></display-image-tab>
+                    </div>
+                </td>
+                <td style="width:30%">
+                    <div style="max-height: 200px;overflow-y: auto;">
+                        <ul style="list-style-type: circle;">
+                            <li ng-repeat="property in sample.properties">
+                                {{property.name}} :
+                                <display-measurement project="home.project" measure="property.best_measure[0]"></display-measurement>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+                <td style="width:30%">{{sample.description}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-xs-4">
+        <div home-calendar project="home.project"></div>
     </div>
 </div>
 
