--- a/website/app/index.html
+++ b/website/app/index.html
@@ -161,6 +161,8 @@
 <script src="application/core/projects/project/files/file-notes.js"></script>
 <script src="application/core/projects/project/files/file-description.js"></script>
 <script src="application/core/projects/project/files/file-edit-controls.js"></script>
+<script src="application/core/projects/project/files/dir-controls.js"></script>
+<script src="application/core/projects/project/files/dir-overview.js"></script>
 <script src="application/core/projects/project/files/display-file-contents-directive.js"></script>
 <script src="application/core/projects/project/access/access-controller.js"></script>
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
@@ -169,7 +171,6 @@
 <script src="application/core/projects/project/reviews/modal-instance-controller.js"></script>
 <script src="application/core/projects/project/notes/notes-controller.js"></script>
 <script src="application/core/projects/project/sideboard/sideboard-controller.js"></script>
-<!--<script src="application/core/projects/project/modal/files-modal-controller.js"></script>-->
 <script src="application/core/projects/project/modal/process-modal-controller.js"></script>
 <script src="application/core/projects/project/modal/samples-modal-controller.js"></script>
 <script src="application/directives/text-editor-directive.js"></script>
@@ -178,6 +179,7 @@
 <script src="application/directives/on-enter.js"></script>
 <script src="application/directives/confirm-click-directive.js"></script>
 <script src="application/directives/edit-note.js"></script>
+<script src="application/services/file-type-service.js"></script>
 <script src="application/services/user-service.js"></script>
 <script src="application/services/alert-service.js"></script>
 <script src="application/services/watcher-service.js"></script>
