update sample page

--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -26,12 +26,12 @@
             </div>
         </div>
         <div class="row">
-            <div class="process-tab">
-                <ul class="nav nav-tabs">
+            <div class="content-tab">
+                <ul class="nav nav-tabs process-border">
                     <li ng-class="{active:view.isSet('setup')}">
                         <a ng-click="view.setTab('setup')"><b><i class="fa fa-fw fa-gear"></i>SETUP</b></a></li>
                     <li ng-class="{active:view.isSet('samples')}"><a ng-click="view.setTab('samples')"><b><i class="fa fa-fw fa-cubes"></i>SAMPLES</b></a></li>
-                    <li ng-class="{active:view.isSet('files')}"><a ng-click="view.setTab('files')"><b><i class="fa fa-fw fa-copy"></i>FILES</b></a>
+                    <li ng-class="{active:view.isSet('files')}"><a  ng-click="view.setTab('files')"><b><i class="fa fa-fw fa-copy"></i>FILES</b></a>
                     </li>
                 </ul>
                 <div class="tab-content clearfix">
