--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -25,7 +25,7 @@
             </a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a ui-sref="projects.project.processes.list.view"
+            <a ui-sref="projects.project.processes.list"
                ui-sref-opts="{reload: true}"
                ng-click="navbar.clearSearch()"
                class="pointer">
@@ -41,7 +41,7 @@
             </a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a ui-sref="projects.project.samples.all"
+            <a ui-sref="projects.project.samples"
                ui-sref-opts="{reload: true}"
                ng-click="navbar.clearSearch()"
                class="pointer">
