--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -1,35 +1,36 @@
 <div class="row">
     <div class="col-xs-12 card card-right">
-        <h2 class="sample">{{ctrl.name}}</h2>
+        <h2 class="sample">{{ctrl.sample.name}}</h2>
 
         <div class="row">
             <div class="col-xs-12">
                 <h4 class="text-uppercase section">Details</h4>
 
-                <div class="row"><b>Name: </b>{{ctrl.name}} <br></div>
-                <div class="row"><b>Owner:</b> {{ctrl.owner}} <br></div>
-                <div class="row"><b>Description: </b><br>{{ctrl.description}}</div>
+                <div class="row"><b>Name: </b>{{ctrl.sample.name}} <br></div>
+                <div class="row"><b>Owner:</b> {{ctrl.sample.owner}} <br></div>
+                <div class="row"><b>Description: </b><br>{{ctrl.sample.description}}</div>
             </div>
         </div>
         <div class="row">
             <div class="content-tab">
                 <ul class="nav nav-tabs">
-                    <li ng-class="{active:isSet('measurements')}">
-                        <a ng-click="setTab('measurements')"><b><i class="fa fa-fw fa-gear"></i>Measurements</b></a></li>
-                    <li ng-class="{active:isSet('files')}"><a ng-click="setTab('files')"><b><i
+                    <li ng-class="{active:ctrl.isSet('measurements')}">
+                        <a ng-click="ctrl.setTab('measurements')"><b><i
+                                class="fa fa-fw fa-gear"></i>Measurements</b></a></li>
+                    <li ng-class="{active:ctrl.isSet('files')}"><a ng-click="ctrl.setTab('files')"><b><i
                             class="fa fa-fw fa-copy"></i>Files</b></a></li>
-                    <li ng-class="{active:isSet('processes')}"><a ng-click="setTab('processes')"><b><i
+                    <li ng-class="{active:ctrl.isSet('processes')}"><a ng-click="ctrl.setTab('processes')"><b><i
                             class="fa fa-fw fa-code-fork"></i>Processes</b></a>
                     </li>
                 </ul>
                 <div class="tab-content clearfix">
-                    <div ng-show="isSet('measurements')">
-                        <measurements-tab></measurements-tab>
+                    <div ng-show="ctrl.isSet('measurements')">
+                        <measurements-tab sample="ctrl.sample"></measurements-tab>
                     </div>
-                    <div ng-show="isSet('files')">
+                    <div ng-show="ctrl.isSet('files')">
                         <files-tab current="current.files"></files-tab>
                     </div>
-                    <div ng-show="isSet('processes')">
+                    <div ng-show="ctrl.isSet('processes')">
                         <processes-tab></processes-tab>
                     </div>
                 </div>
