--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -16,16 +16,16 @@
                 <ul class="nav nav-tabs">
                     <li ng-class="{active:ctrl.isSet('measurements')}">
                         <a ng-click="ctrl.setTab('measurements')"><b><i
-                                class="fa fa-fw fa-gear"></i>Measurements</b></a></li>
+                                class="fa fa-fw fa-gear"></i>Measurements & Transformations ({{ctrl.sample.property_sets.length}})</b></a></li>
                     <li ng-class="{active:ctrl.isSet('files')}"><a ng-click="ctrl.setTab('files')"><b><i
-                            class="fa fa-fw fa-copy"></i>Files</b></a></li>
+                            class="fa fa-fw fa-copy"></i>Files ({{ctrl.sample.linked_files.length}})</b></a></li>
                     <li ng-class="{active:ctrl.isSet('processes')}"><a ng-click="ctrl.setTab('processes')"><b><i
-                            class="fa fa-fw fa-code-fork"></i>Processes</b></a>
+                            class="fa fa-fw fa-code-fork"></i>Processes ({{ctrl.sample.processes.length}})</b></a>
                     </li>
                 </ul>
                 <div class="tab-content clearfix">
                     <div ng-show="ctrl.isSet('measurements')">
-                        <measurements-tab sample="ctrl.sample"></measurements-tab>
+                        <measurements-tab sample="ctrl.sample" project="ctrl.project"></measurements-tab>
                     </div>
                     <div ng-show="ctrl.isSet('files')">
                         <files-tab current="current.files"></files-tab>
@@ -38,94 +38,3 @@
         </div>
     </div>
 </div>
-
-<!--<div class="details-main-content">-->
-<!--<div style="padding-left:30px;">-->
-<!--<div class="row">-->
-<!--<div class="sample headings">Details</div>-->
-<!--<div class="col-xs-12">-->
-<!--<div class="row"><b>Name: </b>{{current.name}} <br></div>-->
-<!--<div class="row"><b>Owner:</b> {{current.owner}} <br></div>-->
-<!--<div class="row"><b>Description: </b><br>{{current.description}}</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--<div class="sample headings">Transformation</div>-->
-<!--<p>-->
-<!--<small class="text-muted">This section will provide <b>{{current.name}}</b> initial measurements and-->
-<!--how these measures have been transformed overtime.-->
-<!--</small>-->
-<!--</p>-->
-<!--<ul style="padding-left: 40px;" class="list-inline">-->
-<!--<li style="padding:10px;" ng-repeat="(key, values) in property_sets">-->
-<!--<div ng-repeat="process in values">-->
-<!--<b ng-if="process.does_transform === true && process.direction == 'out'">-->
-<!--<img style="height: 30px;padding-bottom: 10px; margin-right:5px"-->
-<!--src="assets/img/splash/process-icon.png">-->
-<!--<a ng-class="{'underline': key === ps_id}"-->
-<!--ng-click="showProperties(key)"> {{process.name}}</a></b>-->
-<!--</div>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--<div class="row">-->
-<!--<ul>-->
-<!--<li style="padding:10px;" ng-repeat="property in properties">-->
-<!--<b>{{property.name}}</b> :-->
-<!--<div class="row">-->
-<!--<div class="col-xs-offset-1">-->
-<!--<div class="row">-->
-<!--<span> <u>Best Measure </u>::-->
-<!--<a style="padding-left: 10px;" class="underline" ng-click="measurements(property)">edit</a>-->
-<!--</span>-->
-<!--<span ng-if="property.best_measure.length !== 0">-->
-<!--<display-measurement project="project"-->
-<!--measure="property.best_measure[0]"></display-measurement>-->
-<!--</span>-->
-<!--</div>-->
-<!--<u>Measurements</u> :: <span ng-if="property.measurements.length === 0">&#45;&#45;None&#45;&#45;</span>-->
-<!--<ul>-->
-<!--<li ng-repeat="measure in property.measurements">-->
-<!--<div>-->
-<!--<display-measurement current-process="true" project="project"-->
-<!--measure="measure"></display-measurement>-->
-<!--</div>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</div>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</div>-->
-
-
-<!--<div class="row">-->
-<!--<div class="sample headings">Files</div>-->
-<!--<div class="row" ng-repeat="file in current.files" style="margin-bottom: 20px">-->
-<!--<div style="padding-left: 10px;padding-bottom: 10px;line-height: 5px;">-->
-<!--<img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">-->
-<!--<a ng-click="openFile(file)" class="link" style="padding-left: 15px;">{{file.name}}</a>-->
-
-<!--<div style="padding-left: 80px">-->
-<!--<p class="row">-->
-<!--<small class="text-muted">{{file.birthtime | toDateString}}, {{file.size | bytes}}-->
-<!--</small>-->
-<!--</p>-->
-<!--<div ng-if="isImage(file.mediatype.mime)" class="row">-->
-<!--<a ng-click="openFile(file)">-->
-<!--<img class="img-thumbnail" height="140" width="140"-->
-<!--ng-src={{fileSrc(file.id)}}>-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div ng-if="true" class="row" style="padding-left: 80px">-->
-<!--<span ng-repeat="process in file.processes">-->
-<!--<img class="mc-icon-image" src="assets/img/splash/process-icon.png">-->
-<!--<a ng-click="openProcess(process.id)">{{process.name}}</a>-->
-<!--</span>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
