--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -4,10 +4,19 @@
             <li class="list-group-item pointer"
                 ng-repeat="s in ctrl.samples"
                 ng-class="{active: ctrl.current.id === s.id}"
-                ui-sref="projects.project.samples.edit({sample_id: s.id})">
+                ng-click="ctrl.viewSample(s)">
                 <b class="list-group-item-heading">{{s.name}}
                 </b>
+
                 <div class="truncate-text" class="small">{{s.description}}</div>
+                <div class="row small" style="padding-top: 5px;">
+                    <span class="space-left"><i data-placement="right" data-toggle="tooltip" title="Transformations"
+                                                class="fa fa-fw fa-star" style="color: #ff5a60;"></i>{{s.property_sets.length}}</span>
+                    <span class="space-left"><i data-placement="right" data-toggle="tooltip" title="Files"
+                                                class="fa fa-fw fa-files-o file"></i>{{s.linked_files.length}}    </span>
+                    <span class="space-left  pull-right"><i data-placement="right" data-toggle="tooltip" title="Owner"
+                                                            class="fa fa-fw fa-user"></i>{{s.owner}} </span>
+                </div>
             </li>
         </ul>
         <h4 ng-if="ctrl.samples.length === 0" class="text-center text-uppercase">
