--- a/website/app/index.html
+++ b/website/app/index.html
@@ -142,6 +142,7 @@
 <script src="application/core/projects/project/samples/samples-controller.js"></script>
 <script src="application/core/projects/project/samples/view-measurements-controller.js"></script>
 <script src="application/core/projects/project/samples/measurements-tab-directive.js"></script>
+<script src="application/core/projects/project/samples/processes-tab-directive.js"></script>
 <script src="application/core/projects/project/processes/processes-controller.js"></script>
 <script src="application/core/projects/project/processes/process-list-controller.js"></script>
 <script src="application/core/projects/project/processes/process-create-controller.js"></script>
