--- a/website/app/application/core/projects/project/processes/setup.html
+++ b/website/app/application/core/projects/project/processes/setup.html
@@ -1,9 +1,9 @@
 <div class="tab-pane active">
-    <div ng-if="view.process.setup[0].properties.length === 0">
+    <div ng-if="ctrl.setup.properties.length === 0">
         No Setup information
     </div>
 
-    <table ng-if="view.process.setup[0].properties.length !== 0" class="table">
+    <table ng-if="ctrl.setup.properties.length !== 0" class="table">
         <thead>
         <tr>
             <th>Name</th>
@@ -11,9 +11,9 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="property in view.process.setup[0].properties">
+        <tr ng-repeat="property in ctrl.setup.properties">
             <td style="height: 0px;"> {{property.name}}</td>
-            <td style="height: 0px;">{{property.value}} {{property.units}}</td>
+            <td style="height: 0px;">{{property.value}} {{property.unit}}</td>
         </tr>
         </tbody>
     </table>
