--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -36,7 +36,7 @@
                 </ul>
                 <div class="tab-content clearfix">
                     <div ng-show="view.isSet('setup')">
-                       <setup-tab current="view.process"></setup-tab>
+                       <setup-tab setup="view.process.setup[0]"></setup-tab>
                     </div>
                     <div ng-show="view.isSet('samples')">
                         <samples-tab></samples-tab>
