Refer to correct controller.

--- a/website/app/application/core/projects/project/files/dir-overview.html
+++ b/website/app/application/core/projects/project/files/dir-overview.html
@@ -27,7 +27,7 @@
             <span>
                 <b>{{$index+1}}. </b>
                 <i class="fa fa-files-o fa-fw file-color"></i>
-                <a ng-click="search.gotoFilesPage(file.datafile_id)">{{file.name}}</a>
+                <a ng-click="ctrl.gotoFilesPage(file.datafile_id)">{{file.name}}</a>
                 {{file.mediatype.mime}}
             </span>
 
