--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -14,6 +14,7 @@
                                                 class="fa fa-fw fa-star" style="color: #ff5a60;"></i>{{s.property_sets.length}}</span>
                     <span class="space-left"><i data-placement="right" data-toggle="tooltip" title="Files"
                                                 class="fa fa-fw fa-files-o file"></i>{{s.linked_files.length}}    </span>
+                    <span class="space-left"><composition properties="s.properties"></composition></span>
                     <span class="space-left  pull-right"><i data-placement="right" data-toggle="tooltip" title="Owner"
                                                             class="fa fa-fw fa-user"></i>{{s.owner}} </span>
                 </div>
