--- a/website/app/application/core/projects/project/files/dir-overview.html
+++ b/website/app/application/core/projects/project/files/dir-overview.html
@@ -27,12 +27,12 @@
             <span>
                 <b>{{$index+1}}. </b>
                 <i class="fa fa-files-o fa-fw file-color"></i>
-                <a ng-click="ctrl.gotoFilesPage(file.datafile_id)">{{file.name}}</a>
+                <a ui-sref="projects.project.files.all.edit({file_id: file.datafile_id})">{{file.name}}</a>
                 {{file.mediatype.mime}}
             </span>
 
             <div ng-if="ctrl.isImage(file.mediatype.mime)">
-                <a ng-click="ctrl.openFilePopup(file)">
+                <a ui-sref="projects.project.files.all.edit({file_id: file.datafile_id})">
                     <img class="img-thumbnail" height="140" width="140"
                          ng-src="{{ctrl.fileSrc(file.datafile_id)}}">
                 </a>
